# Digi_Foss

./: .gitignore  README.md  aiohttp_srv.py  bot.session  config.ini  main.py  pyproject.toml
databases/: 1001154364334.db  1001389029155.db  1001454580394.db
plugins/: admin.py  create_db.py  devTools.py
